[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Scripts/Timers/SurvivalTimerNode.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Robotoslab-Bold42.tres" type="DynamicFont" id=2]

[node name="SurvivalNode" type="Node2D"]
script = ExtResource( 1 )

[node name="SurvivalTimer" type="Timer" parent="."]

[node name="SurvivalTimeDisplayer" type="Label" parent="."]
margin_right = 191.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SurvivalTimer" to="." method="_on_SurvivalTimer_timeout"]
